--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@ var ParticlePool = (function() {
 <div class="center-text",
   style="background-color:rgb(0, 0, 0);
         width: 100%;
-        color: rgb(225, 12, 168);
+        color: rgb(175, 88, 152);
         height:100%;
         font-size: 31px;
         font-style: italic;
@@ -524,7 +524,7 @@ var ParticlePool = (function() {
         align-items: center;
         justify-content: center;
         margin-bottom: 5px;
-        text-align: center;">I LOVE YOU!</div>
+        text-align: center;">一个我不能喜欢的人!</div>
 
  </BODY>
 
