--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@ var ParticlePool = (function() {
         align-items: center;
         justify-content: center;
         margin-bottom: 5px;
-        text-align: center;">一个我不能喜欢的人!</div>
+        text-align: center;">一La Quỳnh Phấn!</div>
 
  </BODY>
 
